feat: add comment get by id
